raw/syntex-0.42.2--2016-11-11-11-03-50--0.log
commit ba2e892249d51cce0980e95e0b4daabb7710ad82
Merge: 4da129d 43aed32
Author: bors <bors@rust-lang.org>
Date:   Fri Nov 11 05:55:04 2016 -0800

    Auto merge of #37447 - estebank:non-duplicate-definition-error, r=nrc
    
    Show one error for duplicated type definitions
    
    For the following code:
    
    ``` rustc
    struct Bar;
    struct Bar;
    
    fn main () {
    }
    ```
    
    show
    
    ``` nocode
    error[E0428]: a type named `Bar` has already been defined in this module
      --> src/test/compile-fail/E0428.rs:12:1
       |
    11 | struct Bar;
       | ----------- previous definition of `Bar` here
    12 | struct Bar;
       | ^^^^^^^^^^^
    
    error: aborting due to previous error
    ```
    
    instead of
    
    ``` nocode
    error[E0428]: a type named `Bar` has already been defined in this module
      --> src/test/compile-fail/E0428.rs:12:1
       |
    11 | struct Bar;
       | ----------- previous definition of `Bar` here
    12 | struct Bar;
       | ^^^^^^^^^^^
    
    error[E0428]: a value named `Bar` has already been defined in this module
      --> src/test/compile-fail/E0428.rs:12:1
       |
    11 | struct Bar;
       | ----------- previous definition of `Bar` here
    12 | struct Bar;
       | ^^^^^^^^^^^
    
    error: aborting due to 2 previous errors
    ```
    
    Fixes #35767.
rustc: ./syntex-0.42.2
cargo rustc -p syntex_syntax  -- -Ztime-passes -Zinput-stats
   Compiling log v0.3.6
   Compiling rustc-serialize v0.3.19
   Compiling libc v0.2.15
   Compiling winapi v0.2.8
   Compiling bitflags v0.5.0
   Compiling unicode-xid v0.0.3
   Compiling winapi-build v0.1.1
   Compiling kernel32-sys v0.2.2
   Compiling term v0.4.4
   Compiling syntex_pos v0.42.0
   Compiling syntex_errors v0.42.0
   Compiling syntex_syntax v0.42.0
time: 0.091; rss: 71MB	parsing
Lines of code:             33687
Pre-expansion node count:  223115
time: 0.000; rss: 71MB	recursion limit
time: 0.000; rss: 71MB	crate injection
time: 0.000; rss: 71MB	plugin loading
time: 0.000; rss: 71MB	plugin registration
time: 0.232; rss: 144MB	expansion
time: 0.000; rss: 144MB	maybe building test harness
time: 0.006; rss: 144MB	maybe creating a macro crate
Post-expansion node count: 638863
time: 0.000; rss: 144MB	checking for inline asm in case the target doesn't support it
time: 0.013; rss: 144MB	complete gated feature checking
time: 0.023; rss: 144MB	early lint checks
time: 0.007; rss: 144MB	AST validation
time: 0.076; rss: 158MB	name resolution
time: 0.044; rss: 184MB	lowering ast -> hir
time: 0.008; rss: 194MB	indexing hir
time: 0.006; rss: 194MB	attribute checking
time: 0.004; rss: 150MB	language item collection
time: 0.010; rss: 150MB	lifetime resolution
time: 0.000; rss: 150MB	looking for entry point
time: 0.000; rss: 150MB	looking for plugin registrar
time: 0.040; rss: 171MB	region resolution
time: 0.005; rss: 171MB	loop checking
time: 0.005; rss: 171MB	static item recursion checking
time: 0.329; rss: 160MB	compute_incremental_hashes_map
time: 0.000; rss: 160MB	load_dep_graph
time: 0.040; rss: 170MB	type collecting
time: 0.001; rss: 170MB	variance inference
time: 0.018; rss: 173MB	coherence checking
time: 0.092; rss: 175MB	wf checking
time: 0.185; rss: 185MB	item-types checking
time: 3.333; rss: 233MB	item-bodies checking
time: 0.000; rss: 233MB	drop-impl checking
time: 0.217; rss: 253MB	const checking
time: 0.045; rss: 253MB	privacy checking
time: 0.005; rss: 253MB	stability index
time: 0.017; rss: 253MB	intrinsic checking
time: 0.014; rss: 253MB	effect checking
time: 0.045; rss: 253MB	match checking
time: 0.048; rss: 255MB	liveness checking
time: 0.178; rss: 255MB	rvalue checking
time: 0.378; rss: 438MB	MIR dump
  time: 0.056; rss: 440MB	SimplifyCfg
  time: 0.074; rss: 440MB	QualifyAndPromoteConstants
  time: 0.100; rss: 440MB	TypeckMir
  time: 0.004; rss: 440MB	SimplifyBranches
  time: 0.030; rss: 440MB	SimplifyCfg
time: 0.265; rss: 440MB	MIR cleanup and validation
time: 0.485; rss: 440MB	borrow checking
time: 0.025; rss: 440MB	reachability checking
time: 0.039; rss: 440MB	death checking
time: 0.031; rss: 442MB	stability checking
time: 0.000; rss: 442MB	unused lib feature checking
time: 0.196; rss: 442MB	lint checking
time: 0.000; rss: 442MB	resolving dependency formats
  time: 0.003; rss: 442MB	NoLandingPads
  time: 0.026; rss: 442MB	SimplifyCfg
  time: 0.062; rss: 451MB	EraseRegions
  time: 0.011; rss: 451MB	AddCallGuards
  time: 0.268; rss: 464MB	ElaborateDrops
  time: 0.003; rss: 464MB	NoLandingPads
  time: 0.052; rss: 465MB	SimplifyCfg
  time: 0.028; rss: 465MB	InstCombine
  time: 0.012; rss: 465MB	Deaggregator
  time: 0.002; rss: 465MB	CopyPropagation
  time: 0.034; rss: 465MB	SimplifyLocals
  time: 0.010; rss: 465MB	AddCallGuards
  time: 0.003; rss: 465MB	PreTrans
time: 0.515; rss: 465MB	MIR optimisations
  time: 0.060; rss: 476MB	write metadata
  time: 0.392; rss: 485MB	translation item collection
  time: 0.055; rss: 494MB	codegen unit partitioning
  time: 0.049; rss: 743MB	internalize symbols
time: 4.459; rss: 743MB	translation
time: 0.000; rss: 743MB	assert dep graph
time: 0.000; rss: 743MB	serialize dep graph
  time: 0.548; rss: 421MB	llvm function passes [0]
  time: 0.252; rss: 429MB	llvm module passes [0]
  time: 10.533; rss: 428MB	codegen passes [0]
  time: 0.000; rss: 428MB	codegen passes [0]
time: 12.101; rss: 428MB	LLVM passes
time: 0.000; rss: 428MB	serialize work products
time: 0.345; rss: 105MB	linking
done
